--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,46 @@
   <groupId>practise.session</groupId>
   <artifactId>Practice_maven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+   <dependencies>
+  	<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+	</dependency>
+  	<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.14.3</version>
+    </dependency>
+    <dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>3.6.2</version>
+</dependency>
+  </dependencies>
+  <build>
+  <pluginManagement>
+  <plugins>
+  <plugin> 
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.8.1</version>
+<configuration>
+<source>12</source>
+<target>12</target>
+</configuration>
+</plugin>
+  <plugin>  
+   <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M3</version>
+   <configuration>
+   <suiteXmlFiles>
+   <suiteXmlFile> testng.xml</suiteXmlFile>
+   </suiteXmlFiles>
+   </configuration>
+  </plugin>
+  </plugins>
+  </pluginManagement>
+  </build>
 </project>
